fix: input zooming on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
     -webkit-tap-highlight-color: transparent;
   }
 
+  input, textarea, select {
+    font-size: 16px;
+  }
+
   /* Custom scrollbar */
   ::-webkit-scrollbar {
     width: 4px;
